<resources>
    <string name="app_name">My Journey Journal</string>
    <string name="Home">Home</string>
    <string name="About">about</string>
    <string name="Contact">contact</string>
    <string name="Share">share</string>
    <string name="Setting">setting</string>
    <string name="Support">support</string>
    <string name="SendGift">Send Gift</string>
    <string name="journey_image">Journey Image</string>
    <string name="journey_title">Mardi Hill Trekking</string>
    <string name="pokhara_kaski_nepal">Pokhara, Kaski, Nepal</string>
    <string name="journey_desc">Mardi Himal Trek is a trending short hiking trail that is suitable to spend 1 week’s holiday in Nepal.</string>
    <string name="back">Back</string>
    <string name="journey_location">Delhi India-803213</string>
    <string name="please_login">Please Login</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="SignIn">Sign In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="not_register_sign_up_here">Not register? Sign up here</string>
    <string name="university_of_sunderland">University Of Sunderland</string>
    <string name="already_a_member_sign_in_here">Already a member? Sign in here</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="please_sign_up">Please Sign Up</string>
    <string name="verify_email">Verify Email</string>
    <string name="no_need_sign_in_here">No need? Sign in here.</string>
    <string name="enter_title">Enter Title</string>
    <string name="type_description_in_short">Type Description in short</string>
    <string name="show_image">Show Image</string>
    <string name="button_image_upload">Button Image Upload</string>
    <string name="button_get_current_location">Button Get Current Location</string>
    <string name="submit">Submit</string>
    <string name="enter_location">Enter Location</string>
    <string name="about">About</string>
    <string name="create_new_journey">Create New Journey</string>
    <string name="back_button">Back Button</string>
    <string name="other">Other</string>
</resources>