<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/home_menu"
        android:title="@string/Home"
        android:icon="@drawable/ic_home"/>

    <item android:id="@+id/about_menu"
        android:title="@string/About"
        android:icon="@drawable/ic_info"/>

    <item android:id="@+id/contact_menu"
        android:title="@string/Contact"
        android:icon="@drawable/ic_contact"/>

    <item android:id="@+id/share_menu"
        android:title="@string/Share"
        android:icon="@drawable/ic_share"/>

    <item android:title="@string/other">
        <menu>
            <item android:id="@+id/setting_menu"
                android:title="@string/Setting"
                android:icon="@drawable/ic_setting"/>
            <item android:id="@+id/support_menu"
                android:title="@string/Support"
                android:icon="@drawable/ic_help"/>
            <item android:id="@+id/send_menu"
                android:title="@string/SendGift"
                android:icon="@drawable/ic_gift"/>
        </menu>

    </item>
</menu>