<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JourneyDetail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".DetailsPage">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:background="@color/md_theme_light_background"
            android:padding="14dp"
            android:contentDescription="@string/back_button" />

        <ImageView
            android:id="@+id/imvJourney"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginVertical="16dp"
            android:background="#eaeaea"
            android:contentDescription="@string/journey_image"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/txvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:text="@string/journey_title"
            android:textAlignment="textStart"
            android:textColor="@color/md_theme_light_secondary"
            android:textSize="28sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imv_location"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_location_on" />

            <TextView
                android:id="@+id/txvLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/imv_location"
                android:foregroundGravity="bottom"
                android:paddingHorizontal="8dp"
                android:paddingBottom="8dp"
                android:text="@string/pokhara_kaski_nepal"
                android:textAlignment="textStart"
                android:textColor="@color/md_theme_light_secondary"
                android:textStyle="italic" />
        </RelativeLayout>

        <TextView
            android:id="@+id/txvDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:paddingHorizontal="8dp"
            android:paddingBottom="8dp"
            android:text="@string/journey_desc"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:backgroundTint="@color/md_theme_light_secondary"
            android:text="@string/back" />

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>