<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ForgotPassword">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="40sp"
        android:textColor="@color/md_theme_light_primary"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:fontFamily="@font/lobsterregular"
        android:layout_marginTop="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:backgroundTint="@color/md_theme_light_onPrimary"
            android:backgroundTintMode="screen"
            android:padding="16dp"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_just_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/no_need_sign_in_here"
        android:textColor="@color/md_theme_light_primary"
        android:textSize="18sp"
        android:textStyle="normal" />

    <Button
        android:id="@+id/btn_verify_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify_email"
        android:background="@drawable/btn_selector"
        android:textStyle="bold"
        android:textSize="22sp"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/text_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:text="@string/not_register_sign_up_here"
        android:textColor="@color/md_theme_light_primary"
        android:textSize="18sp" />

</LinearLayout>