<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/md_theme_light_background"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:background="@color/md_theme_light_background"
            android:padding="14dp"
            android:contentDescription="@string/back_button" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/md_theme_light_onPrimary"
                android:hint="@string/enter_title"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColorHint="@color/md_theme_light_onSurface" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/txtDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/md_theme_light_onPrimary"
                android:backgroundTintMode="screen"
                android:hint="@string/type_description_in_short"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:textColorHint="@color/md_theme_light_onSurface" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/txtLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/md_theme_light_onPrimary"
                android:backgroundTintMode="screen"
                android:hint="@string/enter_location"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColorHint="@color/md_theme_light_onSurface" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/showImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded"
            android:contentDescription="@string/show_image"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/outlined"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="60dp">


                <ImageView
                    android:id="@+id/imUploadImage"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/button_image_upload"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_cloud_upload" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                app:cardCornerRadius="60dp">

                <ImageView
                    android:id="@+id/imAddLocation"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/button_get_current_location"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_add_location" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/md_theme_light_primary"
            android:padding="8dp"
            android:text="@string/submit"
            android:textSize="22sp"
            android:textStyle="bold" />


    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>