<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aap="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rv_item_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:background="@drawable/shadow"
    android:padding="14dp">


    <androidx.cardview.widget.CardView
        android:id="@+id/j_card"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="5dp"
        aap:cardCornerRadius="60dp"
        aap:layout_constraintBottom_toBottomOf="@id/rv_item_card"
        aap:layout_constraintEnd_toEndOf="@id/rv_item_card"
        aap:layout_constraintHorizontal_bias="0.0"
        aap:layout_constraintStart_toStartOf="@id/rv_item_card"
        aap:layout_constraintTop_toTopOf="@id/rv_item_card"
        aap:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/j_image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="@string/journey_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/j_title"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/j_card"
        android:maxLines="1"
        android:text="@string/journey_title"
        android:textColor="@color/md_theme_light_secondary"
        android:textSize="22sp"
        android:textStyle="bold"
        aap:layout_constraintBottom_toBottomOf="@id/rv_item_card"
        aap:layout_constraintHorizontal_bias="0.0"
        aap:layout_constraintStart_toEndOf="@id/j_card"
        aap:layout_constraintTop_toTopOf="@id/rv_item_card"
        aap:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/j_location"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/j_title"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/j_card"
        android:maxLines="1"
        android:text="@string/journey_location"
        android:textColor="@color/md_theme_light_secondary"
        android:textSize="12sp"
        aap:layout_constraintBottom_toBottomOf="@id/rv_item_card"
        aap:layout_constraintHorizontal_bias="0.0"
        aap:layout_constraintStart_toEndOf="@id/j_card"
        aap:layout_constraintTop_toBottomOf="@+id/j_title"
        aap:layout_constraintVertical_bias="0.0" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/j_delete"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginHorizontal="8dp"
        android:layout_toEndOf="@id/j_title"
        android:foregroundGravity="right"
        android:src="@drawable/ic_delete"
        aap:civ_border_color="@color/md_theme_light_shadow"
        aap:layout_constraintBottom_toTopOf="@id/j_edit"
        aap:layout_constraintEnd_toEndOf="@id/rv_item_card"
        aap:layout_constraintHorizontal_bias="1.0"
        aap:layout_constraintTop_toTopOf="@id/rv_item_card" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/j_edit"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_below="@+id/j_delete"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/j_title"
        android:src="@drawable/ic_edit"
        aap:layout_constraintBottom_toBottomOf="@id/rv_item_card"
        aap:layout_constraintEnd_toEndOf="@id/rv_item_card"
        aap:layout_constraintHorizontal_bias="1.0"
        aap:layout_constraintTop_toBottomOf="@id/j_delete" />
</androidx.constraintlayout.widget.ConstraintLayout>
